<resources>
    <string name="app_name">Billz</string>
    <string name="brand_name">Billz</string>
    <string name="brand_tagline">Smart Bill Management</string>
    <string name="welcome_message">Welcome to Billz</string>
    <string name="signup_message">Create your Billz Account</string>
    <string name="business_setup_title">Business Setup</string>
    <string name="business_setup_subtitle">Let\'s set up your business profile</string>
    <string name="default_web_client_id">451728978854-g96n8i9rblna5rh9l918u2q1h4k1k3u9.apps.googleusercontent.com</string>
    <string name="action_settings">Settings</string>
    <string name="reports_title">Reports</string>
    <string name="reports_date_today">Today : 29 Apr</string>
    <string name="reports_empty_message">No Reports for Selected Date</string>
    <string name="reports_share">Share reports</string>
    <string name="reports_messages">Notifications</string>
    <string name="reports_back">Back</string>
    <string name="reports_calendar">Select date</string>
    <string name="reports_tab_reports">Reports</string>
    <string name="reports_tab_today">Today</string>
    <string name="reports_tab_counter">Counter</string>
    <string name="reports_tab_items">Items</string>
    <string name="reports_tab_more">More</string>
    <string name="reports_content_placeholder">Reports content placeholder</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="more_premium_title">Try 15-day Free Premium</string>
    <string name="more_premium_desc">No payment details required. You\'ll move to free plan after trial - No auto payments!</string>
    <string name="more_see_benefits">See Benefits</string>
    <string name="more_try_premium">Try Free Premium</string>
    <string name="more_attendance">Attendance</string>
    <string name="more_attendance_desc">Attendance Management</string>
    <string name="more_manage_payroll">Manage Payroll</string>
    <string name="more_payments">Payments</string>
    <string name="more_shopfront">Shopfront</string>
    <string name="more_all_customers">All Customers</string>
    <string name="more_due_customers">Due Customers</string>
    <string name="more_expense_income">Expense - Income (This Week)</string>
    <string name="more_low_stocks">Low Stocks</string>
    <string name="more_staff_partners">Staff and Partners</string>
    <string name="more_sms_available">SMS Available</string>
    <string name="more_items_subitems">Items and Subitems</string>
    <string name="more_stock_cost">Stock Value Cost Price</string>
    <string name="more_stock_selling">Stock Value Selling Price</string>
    <string name="more_new">New</string>
    <string name="cash_flow_title">Cash Flow</string>
    <string name="net_cash_flow">Net Cash Flow</string>
    <string name="total_income_expense_hint">(Total Income - Total Expense)</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="no_entries_message">No Expense/Income Entries for</string>
    <string name="click_to_add_message">Click on + Button to add</string>
    <string name="cat_tax">Tax</string>
    <string name="cat_fuel">Fuel</string>
    <string name="cat_food">Food</string>
    <string name="cat_bill">Bill</string>
    <string name="cat_transport">Transport</string>
    <string name="cat_insurance">Insurance</string>
    <string name="cat_salary">Salary</string>
    <string name="cat_rent">Rent</string>
    <string name="cat_repairs">Repairs</string>
    <string name="cat_commission">Commission</string>
    <string name="cat_advertising">Advertising</string>
    <string name="cat_fee">Fee</string>
    <string name="cat_interest">Interest</string>
    <string name="cat_loan">Loan</string>
    <string name="cat_supplies">Supplies</string>
    <string name="cat_transfer">Transfer</string>
    <string name="cat_contract">Contract</string>
    <string name="cat_miscellaneous">Miscellaneous</string>
    <string name="cat_custom">Custom</string>
    <string name="cat_profit">Profit</string>
    <string name="cat_awards">Awards</string>
    <string name="cat_rental">Rental</string>
    <string name="cat_sale">Sale</string>
    <string name="cat_refund">Refund</string>
    <string name="cat_lottery">Lottery</string>
    <string name="cat_dividend">Dividend</string>
    <string name="cat_investment">Investment</string>
    <string name="add_customer_title">ADD CUSTOMER</string>
    <string name="save">Save</string>
    <string name="customer_details">CUSTOMER DETAILS</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="general_details">GENERAL DETAILS</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date of Birth</string>
    <string name="anniversary">Anniversary</string>
    <string name="date_placeholder">DD/MM/YYYY</string>
    <string name="other_details">OTHER DETAILS</string>
    <string name="gstin">GSTIN</string>
    <string name="address">Address</string>
    <string name="notes">Notes</string>
    <string name="error_fill_fields">Please enter mobile and name</string>
    <string name="success_save">Customer Saved Successfully</string>
    <string name="nav_help_chat">Help Chat</string>
    <string name="nav_inventory">Inventory Management</string>
    <string name="nav_add_expense">Add Expense</string>
    <string name="nav_receipts">Receipts</string>
    <string name="nav_customers">Customers Management</string>
    <string name="nav_staff">Staff Management</string>
    <string name="nav_shopfront">ShopFront</string>
    <string name="nav_refer">Refer App</string>
    <string name="refer_title">Invite your friends!</string>
    <string name="refer_description">Share Billz with your business friends and help them manage their billing easily.</string>
    <string name="refer_link_label">Your Referral Link</string>
    <string name="refer_share_button">Share App</string>
    <string name="refer_thank_you">Thank you for being with us!</string>
    <string name="refer_copy_success">Link copied to clipboard</string>
    <string name="refer_share_message">Hey! I\'m using Billz to manage my business billing and inventory. It\'s awesome! Check it out here: %s</string>
    <string name="nav_returned_receipt">Returned Receipt</string>
    <string name="nav_web_office">Web Back Office</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_buy_printer">Buy Printer</string>
    <string name="nav_other_apps">Other apps</string>
    <string name="nav_connect_kitchen">Connect Kitchen display App</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_language">Language</string>
    <string name="language_display">Language - %1$s</string>
    <string name="nav_weighing_machine">Weighing Machine</string>
    <string name="nav_receipt_settings">Receipt Settings</string>
    <string name="nav_business_settings">Business Settings</string>
    <string name="nav_printer_setup">Printer Setup</string>
    <string name="device_info_title">Device info</string>
    <string name="device_label">Device</string>
    <string name="device_code_label">Device code</string>
    <string name="android_label">Android</string>
    <string name="app_version_label">App version</string>
    <string name="locale_label">Locale</string>
    <string name="signed_in_as_label">Signed in as</string>
    <string name="copy_device_details">Copy device details</string>
    <string name="bill_prefix_title">BILL PREFIX AND COUNT</string>
    <string name="bill_prefix_label">PREFIX</string>
    <string name="bill_no_label">Bill No.</string>
    <string name="bill_prefix_note">Note: Bill number will be +1 for example , If you have added 1000 in Bill no. text box, the bill will start from 1001</string>
    <string name="generate_random">GENERATE RANDOM</string>
    <string name="inventory_title">INVENTORY MANAGEMENT</string>
    <string name="search_hint">Search name, price or tags...</string>
    <string name="tab_items">ITEMS</string>
    <string name="tab_category">CATEGORY</string>
    <string name="tab_modifiers">MODIFIERS</string>
    <string name="tab_ingredient">INGREDIENT</string>
    <string name="chip_all">All</string>
    <string name="chip_low_stock">Low Stock</string>
    <string name="chip_expired">Expired</string>
    <string name="no_items_found">No items found</string>
    <string name="adjust_search_filter">Try adjusting your search or filters</string>
</resources>